<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        app:iconTint="@color/white"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_theme"
        android:enabled="true"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/theme"
        app:iconTint="@color/white"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"
        app:iconTint="@color/white"
        app:showAsAction="always" />
</menu>

