<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

        <LinearLayout
            android:id="@+id/surveyForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:contentDescription="@string/government_of_punjab"
                    android:gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_done" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/password_changed"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/text_size_xxxlarge"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:gravity="center"
                    android:text="@string/password_changed_successfully"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large" />


                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/btn_next"
                    android:layout_width="200dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_height="@dimen/margin_50dp"
                    android:layout_marginHorizontal="@dimen/margin_10dp"
                    android:background="@drawable/register_btn"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_30dp"
                    android:paddingEnd="@dimen/margin_15dp"
                    android:text="@string/continued"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size_xxlarge"
                    android:textStyle="bold" />

            </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>